--- a/.github/workflows/call_api_workflow.yml
+++ b/.github/workflows/call_api_workflow.yml
@@ -10,8 +10,8 @@ jobs:
     steps:
       - name: Run suite run API
         run: |
-          curl -X POST 'https://qualiumdev.finigami.com/api/v1/suite/9732bec7-387a-4844-bfc1-52a9a61b1382/run' \
-            --header 'api-key: $secrets.API_KEY'
+          curl --location --request POST 'https://qualiumdev.finigami.com/api/v1/suite/9732bec7-387a-4844-bfc1-52a9a61b1382/run' \
+          --header 'api-key: $secrets.API_KEY'
 
       - name: Poll suite status data every 10 sec
         run: |
