--- a/action.yml
+++ b/action.yml
@@ -7,14 +7,18 @@ inputs:
   name:
     description: 'Manas Verma'
     required: true
+
 runs:
-  using: "composite"
-  steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.x'
-    - name: Run formatter
-      run: python GitHubActionsFormatter.py
-      shell: bash
+  using: python
+  main: GitHubActionsFormatter.py    
+# runs:
+#   using: "python"
+#   steps:
+#     - uses: actions/checkout@v4
+#     - name: Set up Python
+#       uses: actions/setup-python@v5
+#       with:
+#         python-version: '3.x'
+#     - name: Run formatter
+#       run: python GitHubActionsFormatter.py
+#       shell: bash
