--- a/.github/workflows/test-hello-world.yml
+++ b/.github/workflows/test-hello-world.yml
@@ -23,3 +23,4 @@ jobs:
           custom-text: "Hi, my name is XY!"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          API_KEY: ${{ secrets.API_KEY }}
