--- a/action.yml
+++ b/action.yml
@@ -9,6 +9,9 @@ inputs:
   suite-id:
     description: "ID of the suite to run"
     required: true
+  api-key:
+    description: "API key for authentication"
+    required: true
   api-url:
     description: "Base URL for the Litmus API"
     required: false
@@ -18,6 +21,7 @@ runs:
   using: docker
   image: Dockerfile
   env:
+    API_KEY: ${{ inputs.api-key }}
     LITMUS_API_URL: ${{ inputs.api-url }}
   args:
     - ${{ inputs.suite-id }}
