--- a/action.yml
+++ b/action.yml
@@ -16,12 +16,26 @@ inputs:
     description: "Base URL for the Litmus API"
     required: false
     default: "https://api.litmuscheck.com/api/v1/suite"
+  config:
+    description: "Configuration object for the suite run (JSON string)"
+    required: false
+    default: "{}"
+  environment-id:
+    description: "Environment ID for the suite run"
+    required: false
+
+outputs:
+  suite-result:
+    description: "Final suite run result as JSON"
+    value: ${{ steps.litmus.outputs.suite-result }}
 
 runs:
   using: docker
   image: Dockerfile
   env:
-    API_KEY: ${{ inputs.api-key }}
+    LITMUS_API_KEY: ${{ inputs.api-key }}
     LITMUS_API_URL: ${{ inputs.api-url }}
+    LITMUS_CONFIG: ${{ inputs.config }}
+    LITMUS_ENVIRONMENT_ID: ${{ inputs.environment-id }}
   args:
     - ${{ inputs.suite-id }}
